test/pass/OperatorPriority.java
class OperatorPriority{
    public static void main(String[] a){
        System.out.println("Test Operator priority");
    }
}

class Test {

    int operators(int total){

        int sum;
        sum = 0;
	   a = 1*(2*3 + 3*2)/5+1;	

        return sum ;
    }

}
