test/fail/IncorrectInterruptions.java
class Interruptions{
    public static void main(String[] a){
        System.out.println("Test incorrect Interruptions");
    }
}


// This case contains the test of "break" and "continue"
class Test{

    int foo;

    // Test "break"
    int Break(){
        break;
		int aux01 ;
       
        return 0 ;
    }

	// Test "continue"
	int Continue(){
        continue;
		int aux01 ;
       
        return 0 ;
    }
	
}
